trying to fix footer from overlapping content div

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,6 +3,8 @@
    display:flex;
    background-color:red;
    justify-content:center;
+   width:fit-content;
+   margin:auto;
  }
 
 .footer {
